# vulkano-demo

./: Cargo.toml  README.md
android-project/app/: build.gradle
android-project/app/src/main/java/co/realfit/agdkmainloop/: MainActivity.kt
hello-triangle/: Cargo.toml
hello-triangle/src/: lib.rs  vulkan_app.rs
minimal/: Cargo.toml  build.rs
minimal/minimal-shader/: Cargo.toml
minimal/minimal-shader/src/: lib.rs
minimal/src/: lib.rs  triangle_renderer.rs
src/: main.rs  platform_android.rs  platform_pc.rs  vulkan_app.rs
steel/: Cargo.toml
steel/src/: lib.rs  steel.rs  triangle_renderer.rs
texture/: Cargo.toml
texture/src/: lib.rs  texture_renderer.rs  triangle_renderer.rs
triangle/: Cargo.toml
triangle-taskgraph/: Cargo.toml
triangle-taskgraph/src/: lib.rs  render_context.rs  vulkan_app.rs  vulkan_context.rs
triangle/src/: lib.rs  render_context.rs  vulkan_app.rs  vulkan_context.rs
vulkano-android/: Cargo.toml
vulkano-android/android-project/app/: build.gradle
vulkano-android/src/: lib.rs
vulkano-app/: Cargo.toml
vulkano-app/src/: lib.rs  platform.rs  vulkan_app.rs
vulkano-client/: Cargo.toml
vulkano-client/src/: lib.rs  platform.rs  vulkan_app.rs
vulkano-windows/: Cargo.toml
vulkano-windows/src/: main.rs  platform.rs
