[package]
name = "hello-triangle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.34.1"
vulkano-shaders = "0.34.0"
log = "0.4"
winit = { version = "0.28.6", features = [ "android-game-activity" ] }

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.10.0"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13.3"

[features]
default = []
desktop = []

[lib]
name = "main"
crate_type = ["cdylib"]

[[bin]]
name = "hello-triangle"
path="src/lib.rs"
required-features = [ "desktop" ]
