[package]
name = "triangle-taskgraph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.35.1"
vulkano-taskgraph = "0.35.1"
vulkano-shaders = "0.35.0"
log = "0.4"
winit = { version = "0.30.10", features = [ "android-game-activity" ] }

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.10.0"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13.3"

[features]
default = []
desktop = []

[lib]
name = "main"
crate_type = ["cdylib"]

[[bin]]
name = "triangle-taskgraph"
path="src/lib.rs"
required-features = [ "desktop" ]
