[package]
name = "vulkano-android"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
android_logger = "0.11.0"
winit = { version = "0.29.1-beta", features = [ "android-game-activity" ] }
ndk-sys = "0.5.0-beta.0"
ndk = "0.8.0-beta.0"

[lib]
name = "main"
crate_type = ["cdylib"]
